--- a/app/views/characters/new.html.erb
+++ b/app/views/characters/new.html.erb
@@ -1,4 +1,8 @@
 
+
+<div class="container theme-showcase" role="main">
+<div class="panel panel-info">
+
 <%= form_for :character, url: characters_path do |f| %>
   <p>
     <%= f.label :name %><br>
@@ -12,3 +16,6 @@
 <% end %>
 
 <%= link_to 'Back', characters_path %>
+
+</div>
+</div>
