--- a/app/views/atributes/edit.html.erb
+++ b/app/views/atributes/edit.html.erb
@@ -1,7 +1,7 @@
 
 <h1>Edit atribute</h1>
  
-<%= form_for(@atribute) do |f| %>
+<%= form_for([@character, @atribute]) do |f| %>
  
   <p>
     <%= f.label :stat %><br>
@@ -15,7 +15,7 @@
   </p>
  
   <p>
-    <%= f.submit %>
+    <%= f.submit "Update"%>
   </p>
  
 <% end %>
