Added checks for user logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   <body>
   <%= render partial: 'shared/navbar' %>
 
+  <div class="container">
+   <% if notice %> <div class="alert alert-info"> <%= notice %>  </div>
+   <% end %>
+  <% if alert %>    <div class="alert alert-warning"> <%= alert %>
+    </div>
+   <% end %>
+
+  </div>
     <%= yield %>
   </body>
 </html>
